--- a/exe22/fundo006.html
+++ b/exe22/fundo006.html
@@ -33,7 +33,14 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem mollitia amet fugit eligendi, laboriosam praesentium beatae atque velit rerum repudiandae accusantium natus eaque maxime, minus libero omnis optio eum tempore.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laborum odit dicta deserunt quod corrupti suscipit quisquam ducimus, aut, blanditiis libero incidunt itaque repudiandae cum iste, praesentium illum officiis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem ipsum temporibus reiciendis eveniet vitae labore laudantium iste nihil excepturi corrupti enim, magni aliquam. Reiciendis saepe harum quo consequuntur culpa!
-         </p>
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem mollitia amet fugit eligendi, laboriosam praesentium beatae atque velit rerum repudiandae accusantium natus eaque maxime, minus libero omnis optio eum tempore.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laborum odit dicta deserunt quod corrupti suscipit quisquam ducimus, aut, blanditiis libero incidunt itaque repudiandae cum iste, praesentium illum officiis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem ipsum temporibus reiciendis eveniet vitae labore laudantium iste nihil excepturi corrupti enim, magni aliquam. Reiciendis saepe harum quo consequuntur culpa!
+        </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem mollitia amet fugit eligendi, laboriosam praesentium beatae atque velit rerum repudiandae accusantium natus eaque maxime, minus libero omnis optio eum tempore.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laborum odit dicta deserunt quod corrupti suscipit quisquam ducimus, aut, blanditiis libero incidunt itaque repudiandae cum iste, praesentium illum officiis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem ipsum temporibus reiciendis eveniet vitae labore laudantium iste nihil excepturi corrupti enim, magni aliquam. Reiciendis saepe harum quo consequuntur culpa!
+        </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem mollitia amet fugit eligendi, laboriosam praesentium beatae atque velit rerum repudiandae accusantium natus eaque maxime, minus libero omnis optio eum tempore.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laborum odit dicta deserunt quod corrupti suscipit quisquam ducimus, aut, blanditiis libero incidunt itaque repudiandae cum iste, praesentium illum officiis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem ipsum temporibus reiciendis eveniet vitae labore laudantium iste nihil excepturi corrupti enim, magni aliquam. Reiciendis saepe harum quo consequuntur culpa!
+        </p>
     </main>
     
 </body>
