--- a/exercicios/exe23/tabela002.html
+++ b/exercicios/exe23/tabela002.html
@@ -73,6 +73,10 @@
             border: none; 
             border-bottom-right-radius: 5px;
        }
+
+       tbody > tr:nth-child(2n){ /* ou even(par) / 2n-1, odd(impar) ...*/
+           background-color: lightgray;
+       }
                       
     </style>
 
