--- a/exercicios/exe23/tabela004.html
+++ b/exercicios/exe23/tabela004.html
@@ -60,16 +60,16 @@
 
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
 
         <tbody>
 
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -94,7 +94,7 @@
 
 
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonca</td>
                 <td>Intocaveis</td>
                 <td>Amnesia</td>
@@ -118,6 +118,13 @@
             </tr>
 
     </tbody>
+
+    <tfoot>
+        <tr>
+            <th colspan="4" scope="row">Total</th>
+            <td>1000</td>
+        </tr>
+    </tfoot>
 
 
 
