--- a/exercicios/exe23/tabela005.html
+++ b/exercicios/exe23/tabela005.html
@@ -10,11 +10,13 @@
 
         body{
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+            align-items: center;
         }
 
         table{
             width:500px;
             border-collapse:collapse;
+            margin: auto;
         }
 
         caption{
